--- a/app/src/main/res/layout/row_history.xml
+++ b/app/src/main/res/layout/row_history.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="7.5dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="7.5dp"
+    app:cardCornerRadius="5dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
-
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
-            android:padding="10dp">
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -32,12 +33,21 @@
                 android:fontFamily="@font/montserrat_bold"
                 android:layout_gravity="center_vertical"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"/>
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/llBodyCard">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
             <ImageView
@@ -93,7 +103,8 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_draft"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"/>
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:id="@+id/tvTopik"
@@ -104,9 +115,11 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginBottom="5dp"/>
         </LinearLayout>
 
+    </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
